--- a/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
+++ b/frontend/src/modules/guidedTourPinFinder/less/guidedTourPinFinderModal.less
@@ -155,11 +155,15 @@
 
 .pin-finder-mobile-fallback-message-container {
     width: 100%;
-    margin: 50% 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 10px;
     text-align: center;
     p {
         margin: 10px;
+        max-width: 75%;
     }
 
     button {
